# ml_lab2

./: CMakeLists.txt  README.md  package.xml
scripts/: .naive_bayes.py.swp  knn.py  lda.py  logistic_regression.py  naive_bayes.py  perceptron.py  plot.py  plot_feature.py
scripts/knn/: results_knn  results_time_knn
scripts/lda/: results_lda  results_time_lda
scripts/logistic_regression/: results_logistic_regression  results_time_logistic_regression
scripts/naive_bayes/: results_naive_bayes  results_time_naive_bayes
scripts/perceptron/: results_perceptron  results_time_perceptron
src/: CMakeLists.txt  package.xml
